--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
   "name": "react-input-with-keyboard",
-  "version": "1.0.7",
+  "version": "1.0.8",
   "description": "A simple input component with on-screen keyboard for react application.",
   "main": "build/index.js",
   "scripts": {
-    "build": "babel lib -d build",
+    "build": "webpack",
     "lint": "eslint lib/**; exit 0",
     "lint:watch": "esw -w lib/**",
     "prepublish": "npm run build"
@@ -27,21 +27,27 @@
     "babel-core": "^7.0.0-bridge.0",
     "babel-eslint": "^8.0.2",
     "babel-jest": "^24.9.0",
+    "babel-loader": "^8.0.6",
+    "css-loader": "^3.4.1",
     "eslint": "^4.10.0",
     "eslint-config-airbnb": "^16.1.0",
     "eslint-plugin-import": "^2.8.0",
     "eslint-plugin-jsx-a11y": "^6.0.2",
     "eslint-plugin-react": "^7.4.0",
     "eslint-watch": "^3.1.3",
+    "file-loader": "^5.0.2",
+    "mini-css-extract-plugin": "^0.9.0",
     "polished": "^1.8.2",
     "react-dom": "^16.0.0",
     "regenerator-runtime": "^0.13.3",
-    "styled-components": "^2.2.3"
+    "styled-components": "^2.2.3",
+    "webpack-cli": "^3.3.10"
   },
   "dependencies": {
     "antd": "^3.22.2",
     "object-assign": "^4.1.1",
     "prop-types": "^15.6.0",
-    "react": "^16.0.0"
+    "react": "^16.0.0",
+    "webpack": "^4.41.5"
   }
 }
